<resources>
    <string name="app_name">Game Backlog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="undo">UNDO</string>
    <!-- Hints for GameAdd -->
    <string name="hint_title">Title</string>
    <string name="hint_platform">Platform</string>
    <string name="hint_day">Day</string>
    <string name="hint_month">Month</string>
    <string name="hint_year">Year</string>
</resources>
