<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorBackgroundDark"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiPlatform"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_platform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlatform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiDay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_day"
                    android:layout_weight="2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiMonth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_month"
                    android:layout_weight="2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_year"
                    android:layout_weight="2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
